--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 </head>
 <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a href="#" class="download">Download Excursion (Coming soon!)</a>
+    <p>
+        <a href="#" class="download">Download Excursion (Coming soon!)</a>
+    </p>
+    <video>
+        <source src="resources\videos\excursion.mp4">
+    </video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="resources/images/camp.jpg">
+    <p>
+    <img src="resources/images/phone.png">
+    </p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p>
+        <a href="#" class="download">Download Excursion (Coming soon!)</a>
+    </p>
+    <p id="logo">© Excursion</p>
     
 </body>
 </html>
