Added footer and comments.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Excursion</title>
 </head>
 <body>
+
+    <!-- Landing section -->
+
     <h1>Discover hidden places in the world around you</h1>
     <p>
         <a href="#" class="download">Download Excursion (Coming soon!)</a>
@@ -16,17 +19,27 @@
     <video>
         <source src="resources\videos\excursion.mp4">
     </video>
+
+    <!-- Information Section -->
+
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <img src="resources/images/camp.jpg">
     <p>
+
+    <!-- Coming Soon Section -->
+
     <img src="resources/images/phone.png">
     </p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p>
         <a href="#" class="download">Download Excursion (Coming soon!)</a>
     </p>
+
+    <!-- Footer -->
+
+    <div id="footer">
     <p id="logo">© Excursion</p>
-    
+    </div>
 </body>
 </html>
